# Modern-Flight-Search-Interface

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: main.py
app/api/: routes.py
app/models/: flight.py
app/services/: flight_service.py
app/static/css/: output.css
app/static/js/: app.js
app/templates/: index.html
app/tests/: test_flight.py
app/utils/: flight_data_generator.py
cdk/: app.py
cdk/cdk/: flight_search_stack.py
stub_data/: stub_data_run.py
